--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,17 @@
-ukwm (1.1.12-1) unstable; urgency=medium
+ukwm (1.1.13-1) unstable; urgency=medium
 
-  * Update to new "output" setting for tablets/touchscreens.(LP: #1812143)
+  [ Liu Yi ]
+  * Update to new "output" setting for tablets/touchscreens. (LP: #1812143)
   * Fix bug when use win+p with multi-monitors. (LP: #1828984)
   * Modify window tiling preview for UKUI.
   * Drop build-dep zenity from control and configure.ac.
 
- -- handsome_feng <jianfengli@ubuntukylin.com>  Mon, 17 Jun 2019 13:52:13 +0800
+  [ handsome_feng ]
+  * Fix a typo.
+  * Debian/control:
+    - Bump standards version to 4.4.0.
+
+ -- handsome_feng <jianfengli@ubuntukylin.com>  Mon, 16 Sep 2019 17:02:59 +0800
 
 ukwm (1.1.11-1) unstable; urgency=medium
 
