--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 ukwm (1.2.0-2) UNRELEASED; urgency=medium
 
   * Use secure URI in Homepage field.
+  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
+    Repository-Browse.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 11:47:36 +0000
 
