--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-ukwm (1.2.0-2) UNRELEASED; urgency=medium
+ukwm (1.2.1-1) unstable; urgency=medium
 
+  [ Debian Janitor ]
   * Use secure URI in Homepage field.
   * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
     Repository-Browse.
 
- -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 11:47:36 +0000
+  [ handsome_feng ]
+  * New upstream bugfix release.
+
+ -- handsome_feng <jianfengli@ubuntukylin.com>  Thu, 24 Sep 2020 19:41:48 +0800
 
 ukwm (1.2.0-1) unstable; urgency=medium
 
