--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ukwm (1.2.1-2) UNRELEASED; urgency=medium
+
+  * Bump debhelper from old 12 to 13.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Wed, 02 Nov 2022 01:17:47 -0000
+
 ukwm (1.2.1-1) experimental; urgency=medium
 
   [ Debian Janitor ]
