--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 ukwm (1.2.1-2) UNRELEASED; urgency=medium
 
   * Bump debhelper from old 12 to 13.
+  * Update standards version to 4.6.1, no changes needed.
 
  -- Debian Janitor <janitor@jelmer.uk>  Wed, 02 Nov 2022 01:17:47 -0000
 
